- Updates for SEO - Updates for viewing images of site.

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,17 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+		<link rel="apple-touch-icon" href="/assets/images/Logo_Light.png">
+		<meta name="description" content="Intelligent Warehouse Automation">
+		<meta name="keywords"
+		content="warehouse, automation, internet of things, IoT, software,  warehouse traffic, omnimoles, specialized">
+		<meta name="robots" content="index, nofollow">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="language" content="English">
+		<meta name="revisit-after" content="90 days">
+		<meta name="author" content="Toasted Marshmallow">
+
+
 		<% preact.headEnd %>
 	</head>
 	<body>
